crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__literal_expressions-4.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
0.
---

Some(
    Spanned(
        Float(0, 0),
        0..2,
    ),
)

--- Errors ---
[]
---
