crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__literal_expressions-5.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
444.444
---

Some(
    Spanned(
        Literal(
            Spanned(
                Float(444, 444),
                0..7,
            ),
        ),
        0..7,
    ),
)

--- Errors ---
[]
---
