crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__literal_expressions-6.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
9_999_999_999_999.999_999_999
---

Some(
    Spanned(
        Literal(
            Spanned(
                Float(9999999999999, 999999999),
                0..29,
            ),
        ),
        0..29,
    ),
)

--- Errors ---
[]
---
