crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__literal_expressions-7.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
'a'
---

Some(
    Spanned(
        Literal(
            Spanned(
                Char('a'),
                0..3,
            ),
        ),
        0..3,
    ),
)

--- Errors ---
[]
---
