crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__literal_expressions-8.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
'\n'
---

Some(
    Spanned(
        Literal(
            Spanned(
                Char('\n'),
                0..4,
            ),
        ),
        0..4,
    ),
)

--- Errors ---
[]
---
