crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__literal_expressions-9.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
'\t'
---

Some(
    Spanned(
        Literal(
            Spanned(
                Char('\t'),
                0..4,
            ),
        ),
        0..4,
    ),
)

--- Errors ---
[]
---
