crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__literal_expressions.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
823_472_340
---

Some(
    Spanned(
        Literal(
            Spanned(
                Int(823472340),
                0..11,
            ),
        ),
        0..11,
    ),
)

--- Errors ---
[]
---
