crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__loop_expressions-2.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
{
	let /* mut */ counter = 0;

	loop
		if counter > 10 then
			break
		else
			counter = counter + 1;

	loop (
		if (counter > 10) then (break) else (counter = counter + 1)
	);

	loop {
		if counter > 10 then {
			break;
		} else {
			counter = counter + 1;
		};
	};
}
---

Some(
    Spanned(
        Block(
            Spanned(
                [
                    Spanned(
                        Var {
                            name: Spanned(
                                "counter",
                                17..24,
                            ),
                            rhs: Spanned(
                                Literal(
                                    Spanned(
                                        Int(0),
                                        27..28,
                                    ),
                                ),
                                27..28,
                            ),
                        },
                        3..29,
                    ),
                    Spanned(
                        Loop(
                            Spanned(
                                If {
                                    condition: Spanned(
                                        Binary(
                                            Spanned(
                                                Ident(
                                                    Spanned(
                                                        "counter",
                                                        42..49,
                                                    ),
                                                ),
                                                42..49,
                                            ),
                                            Gt,
                                            Spanned(
                                                Literal(
                                                    Spanned(
                                                        Int(10),
                                                        52..54,
                                                    ),
                                                ),
                                                52..54,
                                            ),
                                        ),
                                        42..54,
                                    ),
                                    then_branch: Spanned(
                                        Break(
                                            None,
                                        ),
                                        63..68,
                                    ),
                                    else_branch: Some(
                                        Spanned(
                                            Assign(
                                                Spanned(
                                                    Ident(
                                                        Spanned(
                                                            "counter",
                                                            79..86,
                                                        ),
                                                    ),
                                                    79..86,
                                                ),
                                                Spanned(
                                                    Binary(
                                                        Spanned(
                                                            Ident(
                                                                Spanned(
                                                                    "counter",
                                                                    89..96,
                                                                ),
                                                            ),
                                                            89..96,
                                                        ),
                                                        Add,
                                                        Spanned(
                                                            Literal(
                                                                Spanned(
                                                                    Int(1),
                                                                    99..100,
                                                                ),
                                                            ),
                                                            99..100,
                                                        ),
                                                    ),
                                                    89..100,
                                                ),
                                            ),
                                            79..100,
                                        ),
                                    ),
                                },
                                39..100,
                            ),
                        ),
                        32..101,
                    ),
                    Spanned(
                        Loop(
                            Spanned(
                                If {
                                    condition: Spanned(
                                        Binary(
                                            Spanned(
                                                Ident(
                                                    Spanned(
                                                        "counter",
                                                        117..124,
                                                    ),
                                                ),
                                                117..124,
                                            ),
                                            Gt,
                                            Spanned(
                                                Literal(
                                                    Spanned(
                                                        Int(10),
                                                        127..129,
                                                    ),
                                                ),
                                                127..129,
                                            ),
                                        ),
                                        117..129,
                                    ),
                                    then_branch: Spanned(
                                        Break(
                                            None,
                                        ),
                                        137..142,
                                    ),
                                    else_branch: Some(
                                        Spanned(
                                            Assign(
                                                Spanned(
                                                    Ident(
                                                        Spanned(
                                                            "counter",
                                                            150..157,
                                                        ),
                                                    ),
                                                    150..157,
                                                ),
                                                Spanned(
                                                    Binary(
                                                        Spanned(
                                                            Ident(
                                                                Spanned(
                                                                    "counter",
                                                                    160..167,
                                                                ),
                                                            ),
                                                            160..167,
                                                        ),
                                                        Add,
                                                        Spanned(
                                                            Literal(
                                                                Spanned(
                                                                    Int(1),
                                                                    170..171,
                                                                ),
                                                            ),
                                                            170..171,
                                                        ),
                                                    ),
                                                    160..171,
                                                ),
                                            ),
                                            150..171,
                                        ),
                                    ),
                                },
                                113..172,
                            ),
                        ),
                        104..176,
                    ),
                    Spanned(
                        Loop(
                            Spanned(
                                Block(
                                    Spanned(
                                        [
                                            Spanned(
                                                If {
                                                    condition: Spanned(
                                                        Binary(
                                                            Spanned(
                                                                Ident(
                                                                    Spanned(
                                                                        "counter",
                                                                        191..198,
                                                                    ),
                                                                ),
                                                                191..198,
                                                            ),
                                                            Gt,
                                                            Spanned(
                                                                Literal(
                                                                    Spanned(
                                                                        Int(10),
                                                                        201..203,
                                                                    ),
                                                                ),
                                                                201..203,
                                                            ),
                                                        ),
                                                        191..203,
                                                    ),
                                                    then_branch: Spanned(
                                                        Block(
                                                            Spanned(
                                                                [
                                                                    Spanned(
                                                                        Break(
                                                                            None,
                                                                        ),
                                                                        214..220,
                                                                    ),
                                                                ],
                                                                209..224,
                                                            ),
                                                        ),
                                                        209..224,
                                                    ),
                                                    else_branch: Some(
                                                        Spanned(
                                                            Block(
                                                                Spanned(
                                                                    [
                                                                        Spanned(
                                                                            Assign(
                                                                                Spanned(
                                                                                    Ident(
                                                                                        Spanned(
                                                                                            "counter",
                                                                                            235..242,
                                                                                        ),
                                                                                    ),
                                                                                    235..242,
                                                                                ),
                                                                                Spanned(
                                                                                    Binary(
                                                                                        Spanned(
                                                                                            Ident(
                                                                                                Spanned(
                                                                                                    "counter",
                                                                                                    245..252,
                                                                                                ),
                                                                                            ),
                                                                                            245..252,
                                                                                        ),
                                                                                        Add,
                                                                                        Spanned(
                                                                                            Literal(
                                                                                                Spanned(
                                                                                                    Int(1),
                                                                                                    255..256,
                                                                                                ),
                                                                                            ),
                                                                                            255..256,
                                                                                        ),
                                                                                    ),
                                                                                    245..256,
                                                                                ),
                                                                            ),
                                                                            235..257,
                                                                        ),
                                                                    ],
                                                                    230..261,
                                                                ),
                                                            ),
                                                            230..261,
                                                        ),
                                                    ),
                                                },
                                                188..262,
                                            ),
                                        ],
                                        184..265,
                                    ),
                                ),
                                184..265,
                            ),
                        ),
                        179..266,
                    ),
                ],
                0..268,
            ),
        ),
        0..268,
    ),
)

--- Errors ---
[]
---
