crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__loop_expressions.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
{
	loop print("To infinity and beyond!");
	loop (print("To infinity and beyond!"));
	loop { print("To infinity and beyond!"); };
}
---

Some(
    Spanned(
        Block(
            Spanned(
                [
                    Spanned(
                        Loop(
                            Spanned(
                                Call {
                                    func: Spanned(
                                        Ident(
                                            Spanned(
                                                "print",
                                                8..13,
                                            ),
                                        ),
                                        8..13,
                                    ),
                                    args: Spanned(
                                        [
                                            Spanned(
                                                Literal(
                                                    Spanned(
                                                        String("To infinity and beyond!"),
                                                        14..39,
                                                    ),
                                                ),
                                                14..39,
                                            ),
                                        ],
                                        13..40,
                                    ),
                                },
                                8..40,
                            ),
                        ),
                        3..41,
                    ),
                    Spanned(
                        Loop(
                            Spanned(
                                Call {
                                    func: Spanned(
                                        Ident(
                                            Spanned(
                                                "print",
                                                49..54,
                                            ),
                                        ),
                                        49..54,
                                    ),
                                    args: Spanned(
                                        [
                                            Spanned(
                                                Literal(
                                                    Spanned(
                                                        String("To infinity and beyond!"),
                                                        55..80,
                                                    ),
                                                ),
                                                55..80,
                                            ),
                                        ],
                                        54..81,
                                    ),
                                },
                                49..81,
                            ),
                        ),
                        43..83,
                    ),
                    Spanned(
                        Loop(
                            Spanned(
                                Block(
                                    Spanned(
                                        [
                                            Spanned(
                                                Call {
                                                    func: Spanned(
                                                        Ident(
                                                            Spanned(
                                                                "print",
                                                                92..97,
                                                            ),
                                                        ),
                                                        92..97,
                                                    ),
                                                    args: Spanned(
                                                        [
                                                            Spanned(
                                                                Literal(
                                                                    Spanned(
                                                                        String("To infinity and beyond!"),
                                                                        98..123,
                                                                    ),
                                                                ),
                                                                98..123,
                                                            ),
                                                        ],
                                                        97..124,
                                                    ),
                                                },
                                                92..125,
                                            ),
                                        ],
                                        90..127,
                                    ),
                                ),
                                90..127,
                            ),
                        ),
                        85..128,
                    ),
                ],
                0..130,
            ),
        ),
        0..130,
    ),
)

--- Errors ---
[]
---
