crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__parse_item.snap
---
source: src/test.rs
expression: maybe_items
---
Ok(
    Func {
        name: (
            "testing",
            5..12,
        ),
        params: [
            (
                "param_0",
                13..20,
            ),
            (
                "param_1",
                22..29,
            ),
            (
                "param_n",
                31..38,
            ),
        ],
        body: None,
    },
)
