crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__record_expressions-2.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
.{ name: "Record", fields: todo() }
---

Some(
    Spanned(
        Record {
            name: None,
            fields: [
                (
                    Spanned(
                        "name",
                        3..7,
                    ),
                    Spanned(
                        Literal(
                            Spanned(
                                String("Record"),
                                9..17,
                            ),
                        ),
                        9..17,
                    ),
                ),
                (
                    Spanned(
                        "fields",
                        19..25,
                    ),
                    Spanned(
                        Call {
                            func: Spanned(
                                Ident(
                                    Spanned(
                                        "todo",
                                        27..31,
                                    ),
                                ),
                                27..31,
                            ),
                            args: Spanned(
                                [],
                                31..33,
                            ),
                        },
                        27..33,
                    ),
                ),
            ],
        },
        0..35,
    ),
)

--- Errors ---
[]
---
