crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__record_expressions.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
Record { name: "Record", fields: todo() }
---

Some(
    Spanned(
        Record {
            name: Some(
                Spanned(
                    "Record",
                    0..6,
                ),
            ),
            fields: [
                (
                    Spanned(
                        "name",
                        9..13,
                    ),
                    Spanned(
                        Literal(
                            Spanned(
                                String("Record"),
                                15..23,
                            ),
                        ),
                        15..23,
                    ),
                ),
                (
                    Spanned(
                        "fields",
                        25..31,
                    ),
                    Spanned(
                        Call {
                            func: Spanned(
                                Ident(
                                    Spanned(
                                        "todo",
                                        33..37,
                                    ),
                                ),
                                33..37,
                            ),
                            args: Spanned(
                                [],
                                37..39,
                            ),
                        },
                        33..39,
                    ),
                ),
            ],
        },
        0..41,
    ),
)

--- Errors ---
[]
---
